--- a/Source/Readers/HTKDeserializers/HTKDeserializers.vcxproj
+++ b/Source/Readers/HTKDeserializers/HTKDeserializers.vcxproj
@@ -46,9 +46,6 @@
   <PropertyGroup>
     <LinkIncremental>$(DebugBuild)</LinkIncremental>
   </PropertyGroup>
-  <PropertyGroup>
-    <TargetName>Cntk.Deserializers.HTK-$(CntkComponentVersion)</TargetName>
-  </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
       <PrecompiledHeader>Use</PrecompiledHeader>
@@ -56,8 +53,7 @@
       <PreprocessorDefinitions>WIN32;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <TreatWarningAsError>true</TreatWarningAsError>
-      <AdditionalIncludeDirectories>$(SolutionDir)Source\Common\Include;$(SolutionDir)Source\Math;$(SolutionDir)Source\Readers\ReaderLib;$(BOOST_INCLUDE_PATH)</AdditionalIncludeDirectories>
-      <OpenMPSupport>true</OpenMPSupport>
+      <AdditionalIncludeDirectories>$(SolutionDir)Source\Common\Include;$(SolutionDir)Source\Math;$(SolutionDir)Source\Readers\ReaderLib</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -95,12 +91,9 @@
     <ClInclude Include="..\..\Common\Include\ExceptionWithCallStack.h" />
     <ClInclude Include="HTKChunkDescription.h" />
     <ClInclude Include="ConfigHelper.h" />
-    <ClInclude Include="HTKDeserializer.h" />
-    <ClInclude Include="HTKFeaturesIO.h" />
+    <ClInclude Include="HTKDataDeserializer.h" />
     <ClInclude Include="HTKMLFReader.h" />
-    <ClInclude Include="MLFDeserializer.h" />
-    <ClInclude Include="MLFUtils.h" />
-    <ClInclude Include="MLFIndexer.h" />
+    <ClInclude Include="MLFDataDeserializer.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="UtteranceDescription.h" />
@@ -112,11 +105,9 @@
       <CompileAsManaged>false</CompileAsManaged>
       <PrecompiledHeader />
     </ClCompile>
-    <ClCompile Include="HTKDeserializer.cpp" />
+    <ClCompile Include="HTKDataDeserializer.cpp" />
     <ClCompile Include="HTKMLFReader.cpp" />
-    <ClCompile Include="MLFDeserializer.cpp" />
-    <ClCompile Include="MLFUtils.cpp" />
-    <ClCompile Include="MLFIndexer.cpp" />
+    <ClCompile Include="MLFDataDeserializer.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
